--- a/Projekt/app/src/main/res/values/colors.xml
+++ b/Projekt/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="primary_dark">#303F9F</color>
     <color name="accent">#c8e8ff</color>
     <color name="windowBackground">#FFFFFF</color>
-    <color name="text">#000000</color>
+    <color name="text">#0c48ae</color>
 </resources>
