--- a/Projekt/app/src/main/res/values-v21/styles.xml
+++ b/Projekt/app/src/main/res/values-v21/styles.xml
@@ -3,8 +3,10 @@
     <style name="AppTheme" parent="android:Theme.Material">
         <item name="android:colorPrimary">@color/primary</item>
         <item name="android:colorPrimaryDark">@color/primary_dark</item>
-        <item name="android:colorAccent">@color/accent</item>
+       <item name="android:colorAccent">@color/accent</item>
         <item name="android:windowBackground">@color/windowBackground</item>
+        <item name="android:textColorHint">@color/text</item>
+        <item name="android:colorControlNormal">@color/accent</item>
         <item name="android:textColor">@color/text</item>
         <item name="android:windowContentTransitions">true</item>
         <item name="android:windowAllowEnterTransitionOverlap">true</item>
