--- a/Projekt/app/src/main/res/layout/activity_main.xml
+++ b/Projekt/app/src/main/res/layout/activity_main.xml
@@ -105,5 +105,41 @@
         android:layout_alignEnd="@+id/tableLayout"
         android:layout_marginBottom="59dp" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/textView6"
+        android:layout_above="@+id/button2"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/name"
+        android:layout_alignTop="@+id/textView6"
+        android:layout_toEndOf="@+id/textView6" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/email"
+        android:layout_alignTop="@+id/name"
+        android:layout_toEndOf="@+id/name" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/createIncident"
+        android:layout_above="@+id/name"
+        android:layout_alignParentEnd="true"
+        android:src="@drawable/siren_selector"
+        android:background="@color/white"/>
+
 
 </RelativeLayout>
