--- a/Projekt/app/src/main/res/menu/menu_main.xml
+++ b/Projekt/app/src/main/res/menu/menu_main.xml
@@ -11,4 +11,8 @@
         android:icon="@mipmap/ic_menu_save"
         android:title="Save" />
 
+    <item android:id="@+id/menu_logout"
+        android:icon="@mipmap/ic_menu_save"
+        android:title="Logout" />
+
 </menu>
